# LANCER

Lancer/: Dockerfile  README.md  pyproject.toml
Lancer-SearXNG/: Dockerfile  README.md  app.py  requirements.txt
Lancer/app/: __init__.py  config.py  main.py
Lancer/app/agents/: browser_agent.py  browser_agent_v2.py  browser_agent_v3.py  deep_research.py  flaresolverr.py  heavy_search.py  llm_client.py  planner.py  synthesizer.py
Lancer/app/agents/graph/: __init__.py  nodes.py  runner.py  simple_agent.py  state.py
Lancer/app/api/: schemas.py
Lancer/app/api/routes/: search.py
Lancer/app/middleware/: rate_limiter.py
Lancer/app/reranking/: __init__.py  authority_scorer.py  embeddings.py  pipeline.py
Lancer/app/sources/: __init__.py  aggregator.py  brave.py  duckduckgo.py  images.py  scraper.py  searxng.py  tavily.py  wikipedia.py
Lancer/app/temporal/: __init__.py  freshness_scorer.py  intent_detector.py
Lancer/docs/: index.html
