[project]
name = "lancer"
version = "0.1.0"
description = "Advanced AI Search API with Temporal Intelligence"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.28.0",
    "aiohttp>=3.11.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",
    "sentence-transformers>=3.3.0",
    "torch>=2.5.0",
    "numpy>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=9.0.0",
    "slowapi>=0.1.9",
    "e2b-desktop>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
